# SimpleNetworkAnalyzer

./: .gitignore  Makefile  README.md  arch.drawio  common.h  elasticSearch.cpp  main.cpp  packet-capture  todo.md
Tests/SimpleNetworkAnalyzerTest/: CMakeLists.txt  devicesTest.cpp  packetCaptureTest.cpp
capturedNetworkSamples/: output_1.json  output_2.json  output_3.json  output_4.json  output_5.json
networkSim/: trafficSim.py
packetCapture/: packetCapture.cpp  packetCapture.h  packetCaptureCallback.cpp  packetCaptureCallback.h
